fix(pie-checkbox): DSW-3824 remove excess whitespace from host element

--- a/packages/components/pie-checkbox/src/checkbox.scss
+++ b/packages/components/pie-checkbox/src/checkbox.scss
@@ -2,8 +2,13 @@
 
 :host {
     display: block;
+    width: max-content;
+    max-width: 100%;
 }
 
+:host([labelFit='fill']) {
+    width: 100%;
+}
 
 @keyframes checkboxCheck {
     0% {
@@ -114,7 +119,7 @@
         border-bottom: 2px solid transparent;
         transform: rotate(45deg);
         transform-origin: 0% 100%;
-    
+
         @media (prefers-reduced-motion: reduce) {
             animation-duration: 1ms !important;
             animation-delay: 0 !important;
@@ -125,7 +130,7 @@
             border-bottom-right-radius: 2px;
             transform: translate3d(0, -16px, 0) rotate(45deg);
         }
-    
+
         @media only percy {
             animation: none;
             width: 8px;
@@ -140,7 +145,7 @@
     &.is-checked.is-animated:before {
         animation: checkboxCheck var(--dt-motion-timing-150) var(--checkbox-motion-easing) forwards;
     }
-    
+
     &.is-checked:not(.is-animated):before {
         width: 8px;
         height: 16px;
@@ -238,6 +243,7 @@
 
     label {
         display: flex;
+        width: 100%;
         max-width: 100%;
         white-space: nowrap;
         cursor: pointer;
